Add core loaders to cmake

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -24,6 +24,10 @@ set(SRCS
   Boot/Boot_ELF.cpp
   Boot/Boot_WiiWAD.cpp
   Boot/ElfReader.cpp
+  ConfigLoaders/BaseConfigLoader.cpp
+  ConfigLoaders/GameConfigLoader.cpp
+  ConfigLoaders/MovieConfigLoader.cpp
+  ConfigLoaders/NetPlayConfigLoader.cpp
   Debugger/Debugger_SymbolMap.cpp
   Debugger/Dump.cpp
   Debugger/PPCDebugInterface.cpp
