--- a/Source/Core/InputCommon/InputCommon.vcxproj
+++ b/Source/Core/InputCommon/InputCommon.vcxproj
@@ -41,14 +41,7 @@
     <ClCompile Include="ControllerInterface\DInput\DInput.cpp" />
     <ClCompile Include="ControllerInterface\DInput\DInputJoystick.cpp" />
     <ClCompile Include="ControllerInterface\DInput\DInputKeyboardMouse.cpp" />
-    <ClCompile Include="ControllerInterface\DInput\XInputFilter.cpp">
-      <!--Disable /Zc:strictStrings so that wbem headers may compile-->
-      <!--
-        This is somewhat gross as it doesn't dynamically remove the option,
-        I really hope the issue is fixed in next VS release :(
-        -->
-      <AdditionalOptions>/Zo /Zc:inline /Zc:rvalueCast /volatile:iso</AdditionalOptions>
-    </ClCompile>
+    <ClCompile Include="ControllerInterface\DInput\XInputFilter.cpp" />
     <ClCompile Include="ControllerInterface\ExpressionParser.cpp" />
     <ClCompile Include="ControllerInterface\ForceFeedback\ForceFeedbackDevice.cpp" />
     <ClCompile Include="ControllerInterface\XInput\XInput.cpp" />
