Check for errors when postprocessing macOS app bundle

--- a/Source/Core/DolphinQt2/CMakeLists.txt
+++ b/Source/Core/DolphinQt2/CMakeLists.txt
@@ -58,7 +58,13 @@ if(APPLE)
 			message(\"(Note: This is only necessary to produce a redistributable binary.\")
 			message(\"To skip, pass -DSKIP_POSTPROCESS_BUNDLE=1 to cmake.)\")
 			set(BU_CHMOD_BUNDLE_ITEMS ON)
-			execute_process(COMMAND ${CMAKE_SOURCE_DIR}/Tools/deploy-mac.py -p platforms/libqcocoa.dylib \"${BUNDLE_PATH}\")
+			execute_process(
+				COMMAND ${CMAKE_SOURCE_DIR}/Tools/deploy-mac.py -p platforms/libqcocoa.dylib \"${BUNDLE_PATH}\"
+				RESULT_VARIABLE retcode
+			)
+			if(NOT \${retcode} EQUAL 0)
+				message(FATAL_ERROR \"Error when postprocessing bundle (return code: \${retcode}).\")
+			endif()
 			file(INSTALL ${CMAKE_SOURCE_DIR}/Data/Sys
 				DESTINATION ${BUNDLE_PATH}/Contents/Resources
 				)
