always build an implementation of GCAdapter (either libusb or android)

--- a/Source/Core/InputCommon/CMakeLists.txt
+++ b/Source/Core/InputCommon/CMakeLists.txt
@@ -32,13 +32,12 @@ elseif(ANDROID)
 	         ControllerInterface/Android/Android.cpp)
 endif()
 
-if(LIBUSB_FOUND)
-	set(SRCS	${SRCS}	GCAdapter.cpp)
-elseif(ANDROID)
-	set(SRCS	${SRCS}	GCAdapter_Android.cpp)
+if(ANDROID)
+        set(SRCS        ${SRCS} GCAdapter_Android.cpp)
 else()
-	set(SRCS	${SRCS}	GCAdapter_Null.cpp)
-endif(LIBUSB_FOUND)
+        set(SRCS        ${SRCS} GCAdapter.cpp)
+        set(LIBS ${LIBS} ${LIBUSB_LIBRARIES})
+endif()
 
 if(LIBEVDEV_FOUND AND LIBUDEV_FOUND)
 	set(SRCS ${SRCS} ControllerInterface/evdev/evdev.cpp)
