InputCommon: Extract ControlReference from ControllerInterface
Better separation of concerns. Relegates `ControllerInterface` to
enumerating input controls, and the new `ControlReference` deals with
combining inputs and configuration expression parsing.

--- a/Source/Core/InputCommon/CMakeLists.txt
+++ b/Source/Core/InputCommon/CMakeLists.txt
@@ -2,7 +2,9 @@ set(SRCS InputConfig.cpp
          ControllerEmu/ControllerEmu.cpp
          ControllerInterface/ControllerInterface.cpp
          ControllerInterface/Device.cpp
-         ControllerInterface/ExpressionParser.cpp)
+         ControlReference/ControlReference.cpp
+         ControlReference/ExpressionParser.cpp
+)
 set(LIBS common)
 
 if(WIN32)
