CMake: build PortAudio as static library
Due to issues raised in #4255.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -559,9 +559,11 @@ if(NOT ANDROID)
 	endif()
 	if(SYSTEM_PORTAUDIO AND NOT APPLE)
 		message("Using shared PortAudio for mic support")
+		set(PORTAUDIO_LIBRARIES portaudio)
 	else()
 		message("Using static PortAudio from Externals for mic support")
 		add_subdirectory(Externals/portaudio)
+		set(PORTAUDIO_LIBRARIES portaudio_static)
 	endif()
 endif()
 
