--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -274,7 +274,7 @@ if(HIDAPI_FOUND)
 endif(HIDAPI_FOUND)
 
 if(PORTAUDIO_FOUND)
-	set(LIBS ${LIBS} portaudio)
+	set(LIBS ${LIBS} ${PORTAUDIO_LIBRARIES})
 endif(PORTAUDIO_FOUND)
 
 if(OPROFILE_FOUND)
