GameINI update for newer Just Dance games

--- a/Data/Sys/GameSettings/SZ7.ini
+++ b/Data/Sys/GameSettings/SZ7.ini
@@ -1,4 +1,4 @@
-# SJOE41, SJOP41 - Just Dance 2014
+# SZ7E41, SZ7P41 - Just Dance 2017
 
 [Core]
 # Values set here will override the main Dolphin settings.
