--- a/Data/Sys/GameSettings/SJN.ini
+++ b/Data/Sys/GameSettings/SJN.ini
@@ -1,4 +1,4 @@
-# SJOE41, SJOP41 - Just Dance 2014
+# SJNE41, SJNP41 - Just Dance 2016
 
 [Core]
 # Values set here will override the main Dolphin settings.
