DolphinWX: Add USB passthrough settings
Allows adding/removing devices from USB passthrough.

--- a/Source/Core/DolphinWX/CMakeLists.txt
+++ b/Source/Core/DolphinWX/CMakeLists.txt
@@ -7,6 +7,7 @@ set(GUI_SRCS
 	Cheats/CheatsWindow.cpp
 	Cheats/CreateCodeDialog.cpp
 	Cheats/GeckoCodeDiag.cpp
+	Config/AddUSBDeviceDiag.cpp
 	Config/AdvancedConfigPane.cpp
 	Config/AudioConfigPane.cpp
 	Config/ConfigMain.cpp
