Add USB passthrough setting and USBUtils
This adds a USB passthrough setting to ConfigManager and everything
needed for the UI to show and manage the whitelist properly.

--- a/Source/Core/UICommon/CMakeLists.txt
+++ b/Source/Core/UICommon/CMakeLists.txt
@@ -1,6 +1,10 @@
 set(SRCS Disassembler.cpp
-         UICommon.cpp)
+         UICommon.cpp
+         USBUtils.cpp)
 
 set(LIBS common)
+if(LIBUSB_FOUND)
+  set(LIBS ${LIBS} ${LIBUSB_LIBRARIES})
+endif()
 
 add_dolphin_library(uicommon "${SRCS}" "${LIBS}")
