IOS: Re-implement USB_HIDv4 (/dev/usb/hid)
This reimplements the USB HID v4 IOS device using the new common
USB code (to reuse more code and allow emulated HIDs to be added
more easily in the future).

The main difference is that HIDs now have to be whitelisted, like
every other USB device for OH0 and VEN.

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -157,7 +157,9 @@ set(SRCS	ActionReplay.cpp
 			IOS/USB/Host.cpp
 			IOS/USB/OH0/OH0.cpp
 			IOS/USB/OH0/OH0Device.cpp
+			IOS/USB/USB_HID/HIDv4.cpp
 			IOS/USB/USBV0.cpp
+			IOS/USB/USBV4.cpp
 			IOS/USB/USB_KBD.cpp
 			IOS/USB/USB_VEN.cpp
 			IOS/USB/Bluetooth/BTBase.cpp
@@ -268,7 +270,6 @@ if(LIBUSB_FOUND)
 	# Using shared LibUSB
 	set(LIBS	${LIBS}	${LIBUSB_LIBRARIES})
 	set(SRCS	${SRCS}	IOS/USB/LibusbDevice.cpp
-	        	       	IOS/USB/USB_HIDv4.cpp
 	        	       	IOS/USB/Bluetooth/BTReal.cpp)
 endif()
 
