--- a/Source/Core/Core/Core.vcxproj.filters
+++ b/Source/Core/Core/Core.vcxproj.filters
@@ -785,10 +785,13 @@
     <ClCompile Include="IOS\USB\OH0\OH0Device.cpp">
       <Filter>IOS\USB</Filter>
     </ClCompile>
+    <ClCompile Include="IOS\USB\USB_HID\HIDv4.cpp">
+      <Filter>IOS\USB</Filter>
+    </ClCompile>
     <ClCompile Include="IOS\USB\USBV0.cpp">
       <Filter>IOS\USB</Filter>
     </ClCompile>
-    <ClCompile Include="IOS\USB\USB_HIDv4.cpp">
+    <ClCompile Include="IOS\USB\USBV4.cpp">
       <Filter>IOS\USB</Filter>
     </ClCompile>
     <ClCompile Include="IOS\USB\USB_KBD.cpp">
@@ -1377,10 +1380,13 @@
     <ClInclude Include="IOS\USB\OH0\OH0Device.h">
       <Filter>IOS\USB</Filter>
     </ClInclude>
+    <ClInclude Include="IOS\USB\USB_HID\HIDv4.h">
+      <Filter>IOS\USB</Filter>
+    </ClInclude>
     <ClInclude Include="IOS\USB\USBV0.h">
       <Filter>IOS\USB</Filter>
     </ClInclude>
-    <ClInclude Include="IOS\USB\USB_HIDv4.h">
+    <ClInclude Include="IOS\USB\USBV4.h">
       <Filter>IOS\USB</Filter>
     </ClInclude>
     <ClInclude Include="IOS\USB\USB_KBD.h">
