IOS: Implement USB_VEN (/dev/usb/ven)

--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -158,10 +158,11 @@ set(SRCS	ActionReplay.cpp
 			IOS/USB/OH0/OH0.cpp
 			IOS/USB/OH0/OH0Device.cpp
 			IOS/USB/USB_HID/HIDv4.cpp
+			IOS/USB/USB_VEN/VEN.cpp
 			IOS/USB/USBV0.cpp
 			IOS/USB/USBV4.cpp
+			IOS/USB/USBV5.cpp
 			IOS/USB/USB_KBD.cpp
-			IOS/USB/USB_VEN.cpp
 			IOS/USB/Bluetooth/BTBase.cpp
 			IOS/USB/Bluetooth/BTEmu.cpp
 			IOS/USB/Bluetooth/BTStub.cpp
